--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@material-tailwind/react": "^2.0.3",
     "autoprefixer": "10.4.14",
     "next": "13.4.5",
