--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@material-tailwind/react": "^2.0.3",
+    "@supabase/supabase-js": "^2.25.0",
     "autoprefixer": "10.4.14",
     "next": "13.4.5",
     "postcss": "8.4.24",
